--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to VPS
 on:
   push:
     branches:
-      - main   # o la rama que uses para producción
+      - main   # cámbialo si usas otra rama
 
 jobs:
   deploy:
@@ -31,12 +31,12 @@ jobs:
           source: "target/*.jar"
           target: "~/wispcrm/"
 
-      - name: Restart service on VPS
+      - name: Run JAR on VPS
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            sudo systemctl stop wispcrm || true
-            sudo systemctl start wispcrm
+            pkill -f 'java -jar' || true
+            nohup java -jar ~/wispcrm/*.jar > ~/wispcrm/app.log 2>&1 &
