--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,12 +32,15 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           source: "target/*.jar"
           target: "~/wispcrm/"
-      - name: Run JAR on VPS
+
+      - name: Restart service on VPS
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            pkill -f 'java -jar' || true
-            nohup java -jar ~/wispcrm/*.jar > ~/wispcrm/app.log 2>&1 &
+            sudo systemctl stop sysred || true
+            sudo systemctl daemon-reload
+            sudo systemctl start sysred
+            sudo systemctl status sysred --no-pager -l
