--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Recuperando código del repositorio
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Configurando Java 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
