--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Dar permisos a mvnw
+        run: chmod +x mvnw
+
       - name: Compilando y empaquetando el proyecto
         run: ./mvnw clean package -DskipTests
 
