--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,14 @@
 				</dependencies>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 	<scm>
 		<developerConnection>Camilo Leal Patiño</developerConnection>
