--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
 			<version>7.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.internetitem</groupId>
+			<artifactId>logback-elasticsearch-appender</artifactId>
+			<version>1.6</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.mail</groupId>
