--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,9 @@ orden:
   template:
     path: /jasper/OrdenServicio.jrxml
 spring:
+  logging:
+    file:
+      path: /var/log/springboot/
   thymeleaf:
     mode: LEGACYHTML5
     cache: false
