--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,7 @@ spring:
   logging:
     file:
       path: /var/log/springboot/
+      name: app.log
   thymeleaf:
     mode: LEGACYHTML5
     cache: false
