--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: VPS_SSH_KEY
 
     steps:
       # 1️⃣ Recuperar código
@@ -32,23 +31,23 @@ jobs:
       - name: Compilando y empaquetando el proyecto
         run: ./mvnw clean package -DskipTests
 
-      # 5️⃣ Copiar JAR al VPS
+      # 5️⃣ Copiar JAR al VPS (con usuario + contraseña)
       - name: Copiando archivos jar al Servidor VPS
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
+          password: ${{ secrets.VPS_PASSWORD }}
           source: "target/*.jar"
           target: "~/wispcrm/"
 
-      # 6️⃣ Reiniciar servicio en VPS
+      # 6️⃣ Reiniciar servicio en VPS (con usuario + contraseña)
       - name: Reiniciando Servicio
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
+          password: ${{ secrets.VPS_PASSWORD }}
           script: |
             sudo systemctl stop sysred || true
             sudo systemctl daemon-reload
