--- a/pom.xml
+++ b/pom.xml
@@ -119,10 +119,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.4.11</version> <!-- última estable compatible con LogstashEncoder -->
+		</dependency>
+
+		<dependency>
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
 			<version>7.4</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>com.internetitem</groupId>
