--- a/pom.xml
+++ b/pom.xml
@@ -119,17 +119,15 @@
 		</dependency>
 
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.4.11</version> <!-- última estable compatible con LogstashEncoder -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
-			<version>7.4</version>
+			<version>6.6</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>com.internetitem</groupId>
