--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,10 +12,10 @@ orden:
     path: "${ORDEN_TEMPLATE_PATH:/jasper/OrdenServicio.jrxml}"
 spring:
   logging:
-      file:
-        name: ./sysred.log
-      level:
-        root: INFO
+    file:
+      name: ./sysred.log
+    level:
+      root: INFO
   # Thymeleaf Configuration
   thymeleaf:
     mode: HTML
@@ -29,8 +29,8 @@ spring:
     password: C4m1l02020+-+
     hikari:
       connection-test-query: "SELECT 1 FROM DUAL"
-      connection-timeout: 600000
-      maximum-pool-size: 500
+      connection-timeout: 20000
+      maximum-pool-size: 50
       max-lifetime: 1800000
       minimum-idle: 20
       validation-timeout: 3000
@@ -42,7 +42,7 @@ spring:
     hibernate:
       ddl-auto: none    # Changed for production safety
     open-in-view: true # Performance improvement
-    show-sql: true     # Disable SQL logging in production
+    show-sql: false     # Disable SQL logging in production
   mail:
     host: smtp.gmail.com
     port: 587
@@ -68,6 +68,12 @@ message :
   msgToken : "${TOKEN:hjfsf}"
 server:
   port: ${PORT:8889}
+  tomcat:
+    max-threads: 200
+    min-spare-threads: 20
+  compression:
+    enabled: true
+    min-response-size: 1024
 sysred :
   notification :
     cron : "${CRON_SCHEDULED:0 0 9 * * 2,6}"
