--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -74,3 +74,7 @@ server:
 sysred :
   notification :
     cron : "${CRON_SCHEDULED:0 0 9 * * 2,6}"
+mikrotik :
+  host: "${MIKROTIK_HOST:192.168.222.6}"
+  username: "${MIKROTIK_USER:api}"
+  password: "${MIKROTIK_PASS:api}"
